# EECE-5698

./: README.md
assignment1/: i_did_it.txt
assignment2/catkin_ws/devel/: _setup_util.py  setup.sh
assignment2/catkin_ws/src/hw02/: #CMakeLists.txt#  CMakeLists.txt~  package.xml
assignment2/catkin_ws/src/hw02/scripts/: add_three_ints_client.py  add_three_ints_client.py~  add_three_ints_server.py  add_three_ints_server.py~  liser.py  puber.py  puber.py~
assignment3/src/sum_params/: CMakeLists.txt  package.xml  sum.py~
lab1/: buildjar.sh  gps_msg.lcm  lcm_read.m  run_gps.sh
lab1/exlcm/: __init__.py  gps.py  gps_msg.java  gps_msg.py
lab1/log/: still-10m  walk-1m
lab2/: 2018-02-08-13-53-35.bag  2018-02-12-15-54-03.bag  2018-02-12-15-56-01.bag  2018-02-12-16-24-42.bag  2018-02-12-16-26-32.bag  2018-02-12-16-40-00.bag  read_utm_coords.m
lab2/devel/: setup.sh
lab2/src/rtk_gps_pkg/: CMakeLists.txt  package.xml
lab3/: buildjar.sh  drive_processing.m  drive_processing.m~  gps_lcm_driver.py  gps_lcm_driver.py~  gps_listener.py  gps_listener.py~  imu_driver.py  imu_driver.py~  lcm_read.m  lcm_read.m~  lcmlog-2018-02-15.00  lcmlog-2018-02-15.01  lcmlog-2018-02-15.02  lcmlog-2018-02-15.03  lcmlog-2018-03-06.00  run_all.sh  still_processing.m  still_processing.m~
lab3/gps_lcm/: gps_t.java  gps_t.py
lab3/imu_lcm/: __init__.py  imu_t.java  imu_t.py  point.java  point.py
lab3/lcmtypes/: gps_msg.lcm~  gps_t.lcm  imu_msg.lcm~  imu_t.lcm
lab4/: StitchImages.m  StitchImages.m~  test.m
lab4/calibration/: Calib_Results.m  Calib_Results.mat  calib_data.mat
(+57 files in other folders)
