<?xml version="1.0"?>
<package format="2">
  <name>hw02</name>
  <version>0.0.0</version>
  <description>Implements a single topic and a single service</description>

  <maintainer email="paul.a.terrasi@gmail.com">Paul Terrasi</maintainer>
  <license>BSD</license>
  <author email="paul.a.terrasi@gmail.com">Paul Terrasi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
